--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "debug": "node --inspect-brk index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
-    "serve": "cross-env NODE_ENV=production node index.js"
+    "serve": "cross-env HOST=localhost PORT=8081 SCOPES=write_products SHOPIFY_API_KEY=76e42fd3fcc5e040d6f4b726d38cae18 SHOPIFY_API_SECRET=17dd05dd7c530b87ae676633b7c8119f node index.js"
   },
   "type": "module",
   "engines": {
