--- a/process.env
+++ b/process.env
@@ -3,3 +3,4 @@ PORT = "8081"
 SCOPES = "write_products"
 SHOPIFY_API_KEY = "76e42fd3fcc5e040d6f4b726d38cae18"
 SHOPIFY_API_SECRET = "17dd05dd7c530b87ae676633b7c8119f"
+SHOP=test-web-app-store1.myshopify.com
