--- a/web/package.json
+++ b/web/package.json
@@ -1,25 +1,26 @@
 {
   "name": "shopify-app-template-node",
-  "version": "1.0.0",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "debug": "node --inspect-brk index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
-    "serve": "cross-env HOST=localhost PORT=8081 SCOPES=write_products SHOPIFY_API_KEY=76e42fd3fcc5e040d6f4b726d38cae18 SHOPIFY_API_SECRET=17dd05dd7c530b87ae676633b7c8119f node index.js"
+    "serve": "cross-env NODE_ENV=production node index.js"
   },
   "type": "module",
   "engines": {
     "node": ">=14.13.1"
   },
   "dependencies": {
-    "@shopify/shopify-app-express": "^2.1.1",
-    "@shopify/shopify-app-session-storage-sqlite": "^1.2.2",
+    "@shopify/shopify-api": "^5.0.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "express": "^4.17.3",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3"
